# davinci-resolve-lipsync

./: pyproject.toml  readme.md  run.py
res/: resources.json
res/kana/: Altair.txt
res/midi/: Altair.mid
tools/: __init__.py  generate_image_sequence.py  generate_image_sequence_timeline.py  load_media.py
tools/modules/: __init__.py  kana_to_image_frames.py  resources.py  utils.py
