[tool.poetry]
name = "lipsync"
version = "0.1.0"
description = ""
package-mode = false
authors = ["sakurahishimochi <sakurahishimochi@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.12"
mido = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
